Update notebook workflow
- add new env var STEPS_PER_EPOCH

--- a/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
+++ b/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
@@ -188,7 +188,7 @@
     "            momentum=0.9,\n",
     "            weight_decay=5e-4,\n",
     "        )\n",
-    "        steps_per_epoch = self.hparams.steps_per_epoch // self.hparams.batch_size\n",
+    "        steps_per_epoch = self.hparams.steps_per_epoch // self.hparams.batch_size if STEPS_PER_EPOCH < 0 else STEPS_PER_EPOCH\n",
     "        scheduler_dict = {\n",
     "            \"scheduler\": OneCycleLR(\n",
     "                optimizer,\n",
@@ -224,7 +224,8 @@
     "BATCH_SIZE = 32\n",
     "NUM_WORKERS = 0\n",
     "data_module = prepare_data(PATH_DATASETS, BATCH_SIZE, NUM_WORKERS)\n",
-    "EPOCHS = int(os.environ.get('FIT_EPOCHS', 30))"
+    "EPOCHS = int(os.environ.get('FIT_EPOCHS', 30))\n",
+    "STEPS_PER_EPOCH = int(os.environ.get('STEPS_PER_EPOCH', -1))"
    ]
   },
   {
