--- a/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
+++ b/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
@@ -224,8 +224,8 @@
     "BATCH_SIZE = 32\n",
     "NUM_WORKERS = 0\n",
     "data_module = prepare_data(PATH_DATASETS, BATCH_SIZE, NUM_WORKERS)\n",
-    "EPOCHS = int(os.environ.get('FIT_EPOCHS', 30))\n",
-    "STEPS_PER_EPOCH = int(os.environ.get('STEPS_PER_EPOCH', -1))"
+    "STEPS_PER_EPOCH = int(os.environ.get('STEPS_PER_EPOCH', -1))\n",
+    "EPOCHS = 30 if STEPS_PER_EPOCH < 0 else -1"
    ]
   },
   {
@@ -794,6 +794,7 @@
     "                  use_ipex = False,\n",
     "                  progress_bar_refresh_rate=10,\n",
     "                  max_epochs=EPOCHS,\n",
+    "                  max_steps=STEPS_PER_EPOCH,\n",
     "                  logger=TensorBoardLogger(\"lightning_logs/\", name=\"basic\"),\n",
     "                  callbacks=[LearningRateMonitor(logging_interval=\"step\"), checkpoint_callback])\n",
     "start = time()\n",
