--- a/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
+++ b/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
@@ -1358,6 +1358,7 @@
     "                        distributed_backend=\"subprocess\",\n",
     "                        progress_bar_refresh_rate=10,\n",
     "                        max_epochs=EPOCHS,\n",
+    "                        max_steps=STEPS_PER_EPOCH,\n",
     "                        logger=TensorBoardLogger(\"lightning_logs/\", name=\"single_ipex\"),\n",
     "                        callbacks=[LearningRateMonitor(logging_interval=\"step\"), checkpoint_callback])\n",
     "start = time()\n",
@@ -2179,6 +2180,7 @@
     "                       distributed_backend=\"subprocess\",\n",
     "                       progress_bar_refresh_rate=10,\n",
     "                       max_epochs=EPOCHS,\n",
+    "                       max_steps=STEPS_PER_EPOCH,\n",
     "                       logger=TensorBoardLogger(\"lightning_logs/\", name=\"multi_ipx\"),\n",
     "                       callbacks=[LearningRateMonitor(logging_interval=\"step\"), checkpoint_callback])\n",
     "start = time()\n",
