--- a/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
+++ b/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
@@ -801,7 +801,8 @@
     "basic_trainer.fit(model, datamodule=data_module)\n",
     "basic_fit_time = time() - start\n",
     "outputs = basic_trainer.test(model, datamodule=data_module)\n",
-    "basic_acc = outputs[0]['test_acc'] * 100"
+    "basic_acc = outputs[0]['test_acc'] * 100\n",
+    "basic_trainer.save_checkpoint(\"checkpoints/model.ckpt\")"
    ]
   },
   {
