--- a/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
+++ b/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
@@ -224,8 +224,9 @@
     "BATCH_SIZE = 32\n",
     "NUM_WORKERS = 0\n",
     "data_module = prepare_data(PATH_DATASETS, BATCH_SIZE, NUM_WORKERS)\n",
-    "STEPS_PER_EPOCH = int(os.environ.get('STEPS_PER_EPOCH', -1))\n",
-    "EPOCHS = 30 if STEPS_PER_EPOCH < 0 else 2"
+    "MAX_STEPS = int(os.environ.get('MAX_STEPS', -1))\n",
+    "MULTIPLE_MAX_STEPS = int(os.environ.get('MULTIPLE_MAX_STEPS', -1))\n",
+    "EPOCHS = 30"
    ]
   },
   {
@@ -794,7 +795,7 @@
     "                  use_ipex = False,\n",
     "                  progress_bar_refresh_rate=10,\n",
     "                  max_epochs=EPOCHS,\n",
-    "                  max_steps=STEPS_PER_EPOCH,\n",
+    "                  max_steps=MAX_STEPS,\n",
     "                  logger=TensorBoardLogger(\"lightning_logs/\", name=\"basic\"),\n",
     "                  callbacks=[LearningRateMonitor(logging_interval=\"step\"), checkpoint_callback])\n",
     "start = time()\n",
@@ -1359,7 +1360,7 @@
     "                        distributed_backend=\"subprocess\",\n",
     "                        progress_bar_refresh_rate=10,\n",
     "                        max_epochs=EPOCHS,\n",
-    "                        max_steps=STEPS_PER_EPOCH,\n",
+    "                        max_steps=MAX_STEPS,\n",
     "                        logger=TensorBoardLogger(\"lightning_logs/\", name=\"single_ipex\"),\n",
     "                        callbacks=[LearningRateMonitor(logging_interval=\"step\"), checkpoint_callback])\n",
     "start = time()\n",
@@ -2181,7 +2182,7 @@
     "                       distributed_backend=\"subprocess\",\n",
     "                       progress_bar_refresh_rate=10,\n",
     "                       max_epochs=EPOCHS,\n",
-    "                       max_steps=STEPS_PER_EPOCH,\n",
+    "                       max_steps=MULTIPLE_MAX_STEPS,\n",
     "                       logger=TensorBoardLogger(\"lightning_logs/\", name=\"multi_ipx\"),\n",
     "                       callbacks=[LearningRateMonitor(logging_interval=\"step\"), checkpoint_callback])\n",
     "start = time()\n",
