--- a/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
+++ b/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
@@ -188,7 +188,7 @@
     "            momentum=0.9,\n",
     "            weight_decay=5e-4,\n",
     "        )\n",
-    "        steps_per_epoch = self.hparams.steps_per_epoch // self.hparams.batch_size if STEPS_PER_EPOCH < 0 else STEPS_PER_EPOCH\n",
+    "        steps_per_epoch = self.hparams.steps_per_epoch // self.hparams.batch_size \n",
     "        scheduler_dict = {\n",
     "            \"scheduler\": OneCycleLR(\n",
     "                optimizer,\n",
