Update notebooks unit test

--- a/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
+++ b/python/nano/notebooks/pytorch/cifar10/nano-trainer-example.ipynb
@@ -225,7 +225,6 @@
     "NUM_WORKERS = 0\n",
     "data_module = prepare_data(PATH_DATASETS, BATCH_SIZE, NUM_WORKERS)\n",
     "MAX_STEPS = int(os.environ.get('MAX_STEPS', -1))\n",
-    "MULTIPLE_MAX_STEPS = int(os.environ.get('MULTIPLE_MAX_STEPS', -1))\n",
     "EPOCHS = 30"
    ]
   },
@@ -2182,7 +2181,7 @@
     "                       distributed_backend=\"subprocess\",\n",
     "                       progress_bar_refresh_rate=10,\n",
     "                       max_epochs=EPOCHS,\n",
-    "                       max_steps=MULTIPLE_MAX_STEPS,\n",
+    "                       max_steps=MAX_STEPS,\n",
     "                       logger=TensorBoardLogger(\"lightning_logs/\", name=\"multi_ipx\"),\n",
     "                       callbacks=[LearningRateMonitor(logging_interval=\"step\"), checkpoint_callback])\n",
     "start = time()\n",
